youtube video_id 입력 & convert 클릭 시 댓글 csv파일로 전환

--- a/Server_crawling/templates/upload.html
+++ b/Server_crawling/templates/upload.html
@@ -2,12 +2,11 @@
 <body>
 <br><br><br><br>
 <center>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
-        <input type="file" name="file"/><br><br><br><br>
+    <form action="/" method="POST" enctype="multipart/form-data">
         <input type="text" name="file" style="background-color: white;"/><br><br><br><br>
 
         <div id="sub">
-            <input type="submit" name="submit_btn" value="Upload"/>
+            <input type="submit" name="submit_btn" value="Convert"/>
             <input type="submit" name="submit_btn" value="Download"/>
             <input type="submit" name="submit_btn" value="Delete"/>
         </div>
