--- a/Server_crawling/templates/upload.html
+++ b/Server_crawling/templates/upload.html
@@ -8,7 +8,8 @@
         <div id="sub">
             <input type="submit" name="submit_btn" value="Convert"/>
             <input type="submit" name="submit_btn" value="Download"/>
-            <input type="submit" name="submit_btn" value="Delete"/>
+            <input type="submit" name="submit_btn" value="Delete"/><br><br>
+            <input type="submit" name="submit_btn" value="Refresh"/>
         </div>
         <ul>
             <br><br><br><br>
