--- a/Server_crawling/templates/upload.html
+++ b/Server_crawling/templates/upload.html
@@ -6,10 +6,7 @@
         <input type="text" name="file" style="background-color: white;"/><br><br><br><br>
 
         <div id="sub">
-            <input type="submit" name="submit_btn" value="Convert"/>
-            <input type="submit" name="submit_btn" value="Download"/>
-            <input type="submit" name="submit_btn" value="Delete"/><br><br>
-            <input type="submit" name="submit_btn" value="Refresh"/>
+            <button name="submit_btn" value="Convert"/>
         </div>
         <ul>
             <br><br><br><br>
